ajout des info dans un header

--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
-<title>Mon CV</title>
-<meta name="description" content="A propos de moi">
-<meta name="keywords" content="web,developer,resume" />
-<meta name="author" content="Mon nom">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--[if lt IE 9]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]--
->
-</head> <body>
-<div id="wrapper"></div>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
+    <title>Mon CV</title>
+    <meta name="description" content="A propos de moi">
+    <meta name="keywords" content="web,developer,resume" />
+    <meta name="author" content="Mon nom">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
+</head> 
+<body>
+    <div id="wrapper"></div>
+    <header>
+        <h1><u>CHARIT Meryem</u></h1>
+        <h2>Eleve ingénieur en LSI en double diplomation M2 DOSI</h2>
+        <img src=/>
+        <dl>
+            <dt>Nom : </dt>
+            <dd>CHARIT</dd>
+            <dt>Prenom :</dt>
+            <dd>Meryem</dd>
+            <dt>Date de naissance :</dt>
+            <dd>08 juin 1997</dd>
+            <dt>email :</dt>
+            <dd>charitmeryem@gmail.com</dd>
+            <dt>Nationalité :</dt>
+            <dd>Marocaine </dd>
+            <dt>Adresse :</dt>
+            <dd> 2,4 rue des archives Univ Res de Kergoat Bat A chambre A311</dd>
+          </dl>
+        <!--<p>Posted by John Doe</p>
+        <p>Some additional information here</p>-->
+      </header>
 </body>
 </html> 
