--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <link rel="stylesheet" href="css/resume.css" />
-    <meta charset="utf-8">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
+  <link rel="stylesheet" href="css/resume.css" />
+  
+  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
     <title>Mon CV</title>
     <meta name="description" content="A propos de moi">
@@ -13,13 +15,14 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 </head> 
 <body>
+ 
     <div id="wrapper">
     <header>
+      <i class="fa fa-camera-retro"></i> 
         <h1><u>CHARIT Meryem</u></h1>
         <img src="CHARIT_photo.jpeg"/>
         <h2>Eleve ingénieur en LSI en double diplomation M2 DOSI</h2>
-        
-        <dl>
+         <dl>
             <dt>Nom : </dt>
             <dd>CHARIT</dd>
             <dt>Prenom :</dt>
@@ -130,7 +133,7 @@
         <a href="https://www.facebook.com/meryem.charit.9/">facebook</a>
         <a href="https://github.com/meryemchar">github</a>
         <a href="https://www.linkedin.com/in/meryem-charit-4a06a2178/">linkedIn</a>
-
+        <i class="fab fa-facebook"></i>
       </footer>
       
         <!--<p>Posted by John Doe</p>
