--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="css/resume.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
