--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -28,14 +28,15 @@
 <body>
  
     <div id="wrapper">
-    <header>
+    <header itemscope itemtype="https://schema.org/Person">
       <i class="fa fa-camera-retro"></i> 
+
         <h1><u>CHARIT Meryem</u></h1>
         <img src="CHARIT_photo.jpeg"/>
         <h2>Eleve ingénieur en LSI en double diplomation M2 DOSI</h2>
          <dl>
-            <dt>Nom : </dt>
-            <dd>CHARIT</dd>
+            <dt >Nom : </dt>
+            <dd itemprop="name" >CHARIT</dd>
             <dt>Prenom :</dt>
             <dd>Meryem</dd>
             <dt>Date de naissance :</dt>
