--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -33,6 +33,7 @@
     <header itemscope itemtype="https://schema.org/Person">
       <i class="fa fa-camera-retro"></i> 
 
+      
         <h1><u>CHARIT Meryem</u></h1>
         <img src="CHARIT_photo.jpeg"/>
         <h2>Eleve ingénieur en LSI en double diplomation M2 DOSI</h2>
@@ -71,11 +72,13 @@
           <article id="monArticle">
             <article>
                 <h5>Marit(sarl) (2 MOIS) sept.2020- nov.2020 Rabat- Maroc </h5>
-                <p>La veille stratégique pour la prise de décision sur la production et consommation énergétique au niveau national. (MSBI, Sql Server).</p>
+                <button onclick="myFunction2('ex1','experience')">+</button>
+                <p class="experience" id="ex1">La veille stratégique pour la prise de décision sur la production et consommation énergétique au niveau national. (MSBI, Sql Server).</p>
             </article>
             <article>
                 <h5>DATA GROUPE MAROC (2 MOIS) avr.2019- juin.2019 Rabat- Maroc</h5>
-                <p>La reconnaissance des émotions pour la mesure de la satisfaction client. (Python, Keras, OpenCv, Tkinter)</p>
+                <button onclick="myFunction2('ex2','experience')">+</button>
+                <p class="experience" id="ex2">La reconnaissance des émotions pour la mesure de la satisfaction client. (Python, Keras, OpenCv, Tkinter)</p>
             </article>
         </article>
         </div>
