--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+
+   <!-- Development -->
+ <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
+ <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+ 
+ <!-- Production -->
+ <script src="https://unpkg.com/@popperjs/core@2"></script>
+ <script src="https://unpkg.com/tippy.js@6"></script>
+
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="css/resume.css" />
   <link rel="stylesheet" href="css/responsive.css" />
@@ -14,6 +23,7 @@
 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
 
   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
@@ -86,8 +96,16 @@
         <div>
           <h3> Compétences </h3>
         <dl>
-          <dt>- Système de gestion de base de données:</dt>
-          <dd> SQL Server, PostgreSQL, MySQL, Mongo DB </dd>
+         
+          <dt id="BD">- Système de gestion de base de données:</dt>
+          <dd>  </dd>
+          <script>
+            // With the above scripts loaded, you can call `tippy()` with a CSS
+            // selector and a `content` prop:
+            tippy('#BD', {
+              content: 'SQL Server, PostgreSQL, MySQL, Mongo DB',
+            });
+          </script>
 
           <dt>- Développement web: </dt>
           <dd>html/css/javascript , Laravel, Asp.net,Spring Boot,Angular</dd>
@@ -164,4 +182,5 @@
         <!--<p>Posted by John Doe</p>
         <p>Some additional information here</p>-->    
 </body>
+
 </html> 
