ajouter la tooltip que j'ai programé en js

--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -95,35 +95,37 @@
 
         <div>
           <h3> Compétences </h3>
+
+
         <dl>
          
-          <dt id="BD">- Système de gestion de base de données:</dt>
-          <dd>  </dd>
-          <script>
+          <dt id="BD" onmouseover="tooltip('BD')"  onmouseout=" DeleteTooltip()">- Système de gestion de base de données:</dt>
+          <!-- <dd> 'SQL Server, PostgreSQL, MySQL, Mongo DB' </dd> -->
+          <!-- <script>
             // With the above scripts loaded, you can call `tippy()` with a CSS
             // selector and a `content` prop:
             tippy('#BD', {
               content: 'SQL Server, PostgreSQL, MySQL, Mongo DB',
             });
-          </script>
+          </script> -->
 
-          <dt>- Développement web: </dt>
-          <dd>html/css/javascript , Laravel, Asp.net,Spring Boot,Angular</dd>
+          <dt id='WEB' onmouseover="tooltip('WEB')"  onmouseout=" DeleteTooltip()">- Développement web:</dt>
+          <!-- <dd>html/css/javascript , Laravel, Asp.net,Spring Boot,Angular</dd> -->
 
-          <dt>- Langages programmation :</dt>
-          <dd> C/C++, Java, Python, php ,Matlab</dd>
+          <dt id='LP' onmouseover="tooltip('LP')"  onmouseout=" DeleteTooltip()">- Langages programmation :</dt>
+          <!-- <dd> C/C++, Java, Python, php ,Matlab</dd> -->
 
-          <dt>- Conception : </dt>
-          <dd>UML,Merise</dd>
+          <dt id='CPT' onmouseover="tooltip('CPT')"  onmouseout=" DeleteTooltip()">- Conception : </dt>
+          <!-- <dd>UML,Merise</dd> -->
 
-          <dt>Bisness Intelligence: </dt>
-          <dd>MSBI(SSIS,SSAS,SSRS)</dd>
+          <dt id='BI' onmouseover="tooltip('BI')"  onmouseout=" DeleteTooltip()">- Bisness Intelligence: </dt>
+          <!-- <dd>MSBI(SSIS,SSAS,SSRS)</dd> -->
 
-          <dt>- Intelligence artificielle: </dt>
-          <dd> Machine Learning</dd>
+          <dt id='AI' onmouseover="tooltip('AI')"  onmouseout=" DeleteTooltip()">- Intelligence artificielle: </dt>
+          <!-- <dd> Machine Learning</dd> -->
 
-          <dt>- Système de contrôle de version: </dt>
-          <dd> git</dd>
+          <dt id='SCV' onmouseover="tooltip('SCV')"  onmouseout=" DeleteTooltip()">- Système de contrôle de version: </dt>
+          <!-- <dd> git</dd> -->
         </dl>
         </div>
         formation
